--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,7 +6,7 @@ name: Generate GitHub Contributions Snake Image
 # Run every Sunday at 1am to generate an updated image.
 on:
   schedule:
-    - cron: '* 1 * * 0'
+    - cron: "0 */6 * * *"
 
   # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
